crates/aranya-policy-compiler/tests/data/match_expr/result_duplicate_arm_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: duplicate match patterns found
  |
3 |         Ok(v) => v
  |         ^^^^^ duplicate pattern
4 |         Ok(v) => v
  |         ----- first defined here
